--- a/HangmanApp/local.properties
+++ b/HangmanApp/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 15 12:53:54 CEST 2015
-sdk.dir=C\:\\Users\\Christopher\\AppData\\Local\\Android\\sdk
+#Tue Sep 15 13:37:12 CEST 2015
+sdk.dir=C\:\\Programs\\Android\\sdk
